# fibonacci_lattice_tiling_toolkit

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/Examples/: viewer_vectors-Real_Data-Video_3-Time_52.75.csv  viewer_vectors-Real_Data-Video_3-Time_57.70.csv  viewer_vectors-Test_Rhino_Birds.csv  viewer_vectors-Test_Two_Clusters.csv
docs/api/: api-reference.txt
docs/source/: conf.py  index.rst
docs/tutorials/: installation-doc.md  usage-examples.txt
examples/: FB_projection_visualization-bw_only.py  FB_projection_visualization.py  FB_rectilinear_visualization.py  FB_sphere_visualization-bw_only.py  FB_sphere_visualization.py  sphere_visualization.py
input/: SFLP_40_layout.csv  SFLP_65_columns_spirals_layout.csv  SFLP_65_flawed_layout.csv  SFLP_65_layout.csv  SFLP_65_rc_spirals_layout.csv  SFLP_65_wrapped_layout.csv
src/fibonacci_lattice_tiling_toolkit/: __init__.py  data_types.py
src/fibonacci_lattice_tiling_toolkit/utilities/: __init__.py  data_utils.py  heatmap_utils.py  visualization_utils.py
tests/: temp.py  test_core.py
